tools: Fix for RISC OS which doesn't allow COMMON section.

* tools/bftest.c: Define INCLUDED_BY_MAIN_MODULE.
* tools/mpicalc.c: Likewise.
* tools/shmtest.c: Likewise.

--

GnuPG-bug-id: 5215
Signed-off-by: NIIBE Yutaka <gniibe@fsij.org>